# cpp-streams

./: CMakeLists.txt  DataSink.cpp  DataSink.h  DataSource.cpp  DataSource.h  MapFunction.cpp  MapFunction.h  PrintSink.cpp  PrintSink.h  TextFileSource.cpp  TextFileSource.h  main.cpp
